# pointcloud-capture

./: .gitignore  CMakeLists.txt  PointcloudCapture.sln  README.md  main.cpp  net_client.cpp  net_client.hpp
PointcloudCapture/: MyKinect.cpp  MyKinect.h  PointcloudCapture.cpp  PointcloudCapture.vcxproj  PointcloudCapture.vcxproj.filters  stdafx.cpp  stdafx.h
